# Voyagr

./: ARCHITECTURE.md  SYSTEM_PROMPT.md  pyproject.toml  streamlit_app.py
app/: main.py
app/agent/: graph.py  nodes.py  routing.py  state.py
app/api/: routes.py
app/chains/: __init__.py  itinerary_chain.py
app/config/: settings.py
app/core/: __init__.py  exceptions.py  logging.py
app/mcp_server/: prompts.py  resources.py  server.py
app/memory/: __init__.py  conversation.py
app/models/: __init__.py  llm.py
app/prompt_library/: __init__.py  examples.py  itinerary_prompts.py
app/schemas/: __init__.py  itinerary.py  places.py  weather.py
app/tools/: __init__.py  places.py  tool_exceptions.py  trip_tools.py  weather.py
